styles.css
@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;1,700&display=swap');


:root {

    --primary-color: #10B981;
    --off-white:#E5E7EB;
}

body {

    font-family: 'Noto Sans', sans-serif;
    margin: 0px;
}

hr {

    margin: 2rem 0rem;
}

.container {

    padding: 1rem 1rem;
}

.container-center {

    max-width: 600px;
    margin: auto;
}

.container-centered02 {

    max-width: 1000px;
    margin: auto;
}


.container-centered{

    max-width: 300px;
    margin-left: 41rem;
}

.container-centered01{

    max-width: 350px;
    margin-left: 37rem;
}



.link {

    padding: 0.5rem 1rem;


}


.link-primary {
    background-color: var(--primary-color);
    border-radius: 0.5rem;
    color: white;
    
    
    
}

.link-secondary {

    color: var(--primary-color);
    border-radius: 0.5rem;
    border: 1px solid var(--primary-color);

}

.list-non-bullet {

    list-style: none;

}

.list-inline {

    display: inline;
    padding: 0rem 0.5rem;

}


.navigation {

    background-color: var(--primary-color);
    color: white;
    border-bottom-left-radius: 1rem;
    padding: 1rem;
    

}

.navigation .nav-brand{

    font-weight: bold;
}


.navigation .link{

    color: white;
    
}

.navigation .nav-pills{

    text-align: right;
}

.navigation .link-active{

    font-weight: bold;
}


.hero{

    padding: 2rem;
}

.hero .hero-img{

    max-width: 350px;
    display: block;
    margin: auto;

}

.hero .hero-header{

    padding-top: 1rem;
    text-align: center;
    padding: 1rem;
    margin-bottom: -2rem;
}

.section{

    padding: 2rem;
}

.section h1 {

    text-align: center;

}

.ow{

    background-color: var(--off-white);
}

.footer{

    background-color: var(--primary-color);
    padding: 2rem 1rem;
    color: white;
    text-align: center;
    border-top-right-radius: 1rem;
}

.footer .link{

    color: white;
    
}

.footer-header{


    padding: 1rem 0rem;
    font-size: larger;
    font-weight: bold;
}

.date-margin{

    margin: 16rem;
}

.title-project02{

    margin: 1rem;
    margin-left: -12rem;
}


.title-project01{

    margin: 1rem;
    margin-left: -17rem;
}

